## Process this file with automake to produce Makefile.in
include $(top_srcdir)/config/Make-rules

EXTRA_DIST =                                                                  \
  conform_tens_conv_oper_2d.f.m4   conform_tens_conv_oper_3d.f.m4             \
  div_tensor_2d.f.m4               div_tensor_3d.f.m4                         \
  helper_functions_2d.f.m4         helper_functions_3d.f.m4                   \
  log_tens_conv_oper_2d.f.m4       log_tens_conv_oper_3d.f.m4                 \
  sqrt_tens_conv_oper_2d.f.m4      sqrt_tens_conv_oper_3d.f.m4                \
  helper_functions.f.m4
BUILT_SOURCES =                                                               \
  conform_tens_conv_oper_2d.f      conform_tens_conv_oper_3d.f                \
  div_tensor_2d.f                  div_tensor_3d.f                            \
  helper_functions_2d.f            helper_functions_3d.f                      \
  log_tens_conv_oper_2d.f          log_tens_conv_oper_3d.f                    \
  sqrt_tens_conv_oper_2d.f         sqrt_tens_conv_oper_3d.f                   \
  helper_functions.f
CLEANFILES = ${BUILT_SOURCES}
