## Process this file with automake to produce Makefile.in
include $(top_srcdir)/config/Make-rules

EXTRA_DIST =                                                                  \
  conform_tens_conv_oper2d.f.m4   conform_tens_conv_oper3d.f.m4               \
  div_tensor2d.f.m4               div_tensor3d.f.m4                           \
  log_tens_conv_oper2d.f.m4       log_tens_conv_oper3d.f.m4                   \
  sqrt_tens_conv_oper2d.f.m4      sqrt_tens_conv_oper3d.f.m4
BUILT_SOURCES =                                                               \
  conform_tens_conv_oper2d.f      conform_tens_conv_oper3d.f                  \
  div_tensor2d.f                  div_tensor3d.f                              \
  log_tens_conv_oper2d.f          log_tens_conv_oper3d.f                      \
  sqrt_tens_conv_oper2d.f         sqrt_tens_conv_oper3d.f
CLEANFILES = ${BUILT_SOURCES}
